--- a/src/html/studyreport_all_info.html
+++ b/src/html/studyreport_all_info.html
@@ -20,6 +20,7 @@
   <!-- endbuild -->
 
 
+
 </head>
 
 <body>
@@ -62,6 +63,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -189,6 +191,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -222,6 +225,7 @@
 
 
 
+
   </div>
 
   <!-- build:js -->
@@ -234,8 +238,11 @@
   <script src="../js/vendor/animo.js/animo.js"></script>
   <script src="../js/vendor/jquery-localize-i18n/dist/jquery.localize.js"></script>
   <script src="../vendor/sweetalert/dist/sweetalert.min.js"></script>
+  <script src="../../js/vendor/moment/min/moment-with-locales.min.js"></script>
+  <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
