--- a/src/html/studyreport_overall.html
+++ b/src/html/studyreport_overall.html
@@ -20,6 +20,7 @@
   <!-- endbuild -->
 
 
+
 </head>
 
 <body>
@@ -62,6 +63,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -179,6 +181,7 @@
       </div>
     </aside>
     <!-- endbuild -->
+
 
 
 
@@ -366,6 +369,7 @@
 
 
 
+
   </div>
 
   <!-- build:js -->
@@ -378,8 +382,11 @@
   <script src="../js/vendor/animo.js/animo.js"></script>
   <script src="../js/vendor/jquery-localize-i18n/dist/jquery.localize.js"></script>
   <script src="../vendor/sweetalert/dist/sweetalert.min.js"></script>
+  <script src="../../js/vendor/moment/min/moment-with-locales.min.js"></script>
+  <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
